k8s/mapwarper_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mapwarper-web
  labels:
    app: web
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: web
    spec:
      # This section describes the containers that make up the deployment
      containers:
        - name: web
          # image: localhost:32000/mapwarper_web:latest
          # You can use envsubst to set the image
          # e.g. IMAGE=localhost:32000/mapwarper_web:latest envsubst < file.yaml 
          image: ${IMAGE}
          imagePullPolicy: Always
          command: ["/bin/bash"]
          args: ["-c", "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"]
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 1
            requests:
              cpu: 500m
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 45
            periodSeconds: 20
            timeoutSeconds: 5
          volumeMounts:
            - name: mapwarper-filestore-volume
              mountPath: /mnt/mapwarper/maps
              subPath: maps
            - name: mapwarper-filestore-volume
              mountPath: /app/public/shared
              subPath: shared
            - name: bucket-secrets-volume
              mountPath: /secrets/service-account
              readOnly: true

          # set variables from config map from mapwarper-app-config.yml
      volumes:
        - name: mapwarper-filestore-volume
          persistentVolumeClaim:
            claimName: mapwarper-fileserver-claim
            readOnly: false
        #uncomment for use with the sql proxy    
        # - name: sql-secrets-volume
        #   secret:
        #     secretName: cloudsql-instance-credentials
        - name: bucket-secrets-volume
          secret:
            secretName: bucket-credentials
