k8s/privileged_mapwarper_deployment.yaml
# Deployment to import maps from special bucket, reads in extra env variables 
# Of imports bucket with priviledged context, so we have a separate deployment

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mapwarper-priv
  labels:
    app: web
spec:
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: web
    spec:
      # This section describes the containers that make up the deployment
      containers:
        - name: web
          image: localhost:32000/mapwarper_web:latest
          imagePullPolicy: Always
          stdin: true
          tty: true
          #command: ["/bin/bash"]
          #args: ["-c", "rm -f tmp/pids/server.pid && bundle exec rails s -p 30001 -b '0.0.0.0'"]  #30001 as we don't really want this to be serving
          ports:
            - containerPort: 3000
          #elevate security as it needs to mount fuse
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          volumeMounts:
            - name: mapwarper-persistent-volume
              mountPath: /mnt/mapwarper/maps
              subPath: maps
            - name: mapwarper-persistent-volume
              mountPath: /app/public/shared
              subPath: shared
            - name: bucket-secrets-volume
              mountPath: /secrets/service-account
              readOnly: true

          # set variables form config map, app non secrets
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy"]
          args: ["-instances=$(DB_INSTANCE)=tcp:5432", "-credential_file=/secrets/cloudsql/secret_cloud_sql.json"]
          volumeMounts:
            - name: my-secrets-volume
              mountPath: /secrets/cloudsql
              readOnly: true

      volumes:
        - name: mapwarper-persistent-volume
          persistentVolumeClaim:
            claimName: mapwarper-pv-claim
        - name: my-secrets-volume
          secret:
            secretName: cloudsql-instance-credentials
        - name: bucket-secrets-volume
          secret:
            secretName: bucket-credentials
