k8s/redis-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    app: redis
spec:
  containers:
    - name: master
      image: redis
      args: ["--appendonly", "no", "--save", "", "--maxmemory", "900mb", "--maxmemory-policy", "allkeys-lru"]
      ports:
        - containerPort: 6379
      resources:
          limits:
            memory: 1Gi
