k8s/mapwarper-service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "mapwarper-web-service"
  namespace: "default"
  labels:
    app: "web"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 3000
  selector:
    app: "web"
  type: "LoadBalancer"
  loadBalancerIP: ""
  loadBalancerSourceRanges:
    #add ip ranges here
